--- a/templates/admin/client_list.html.twig
+++ b/templates/admin/client_list.html.twig
@@ -33,6 +33,8 @@
 							<td>
 								<a href="{{ path('admin_booking_client', {'userId': user.id}) }}" class="btn btn-general btn-sm mt-1">Réserver pour un client</a>
 								<a href="{{ path('admin_client_reservations', {'userId': user.id}) }}" class="btn btn-general btn-sm mt-1">Voir les réservations</a>
+								<a href="{{ path('admin_subscription_new', {'userId': user.id}) }}" class="btn btn-general btn-sm mt-1">Ajouter un forfait</a>
+								<a href="{{ path('admin_user_subscriptions', {'userId': user.id}) }}" class="btn btn-general btn-sm mt-1">Gérer les crédits</a>
 								<a href="{{ path('admin_client_edit', {'id': user.id}) }}" class="btn update btn-sm">Modifier</a>
 								<a href="{{ path('admin_client_delete', {'id': user.id}) }}" class="btn complet btn-sm mt-1" onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce client ?');">Supprimer</a>
 							</td>
