update general before push

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -92,8 +92,12 @@
 					<footer class="footer">
 						<nav>
 							<ul>
-								<li><ahref="{{path('reglement_interieur')}}">Règlement Intérieur</a></li>
-								<li><ahref="{{path('nos_cgv')}}">Nos CGV</a></li>
+								<li><a 
+								href="{{path('reglement_interieur')}}">Règlement Intérieur
+							</a></li>
+								<li><a
+								href="{{path('nos_cgv')}}">Nos CGV
+								</a></li>
 							</ul>
 						</nav>
 						<p class="text-center">©2024 Tous droits réservés. AirStudio73 - Powered by Samuel MÉLINE</p>
