--- a/templates/admin/user_subscriptions.html.twig
+++ b/templates/admin/user_subscriptions.html.twig
@@ -4,27 +4,33 @@
 	<div class="container">
 		<div class="card shadow-sm">
 			<h1>Crédits pour chaque cours</h1>
-			<table class="table">
+			<table class="table mb-0">
 				<thead>
 					<tr>
+						<th>Forfait</th>
 						<th>Cours</th>
 						<th>Crédits Restants</th>
 						<th>Actions</th>
 					</tr>
 				</thead>
 				<tbody>
+					{% set displayedSubscriptions = [] %}
+					<!-- Variable pour stocker les forfaits déjà affichés -->
 					{% for subscription in user.subscriptions %}
 						{% for subscriptionCourse in subscription.subscriptionCourses %}
-							<tr>
-								<td>{{ subscriptionCourse.course.name }}</td>
-								<!-- Assurer des IDs uniques en combinant l'ID de la souscription et du cours -->
-								<td id="credits-{{ subscription.id }}-{{ subscriptionCourse.course.id }}">{{ subscriptionCourse.remainingCredits }}</td>
-								<td>
-									<!-- Utiliser l'ID de la souscription et du cours pour assurer l'unicité -->
-									<button class="btn btn-danger" onclick="updateCredits({{ user.id }}, {{ subscription.id }}, {{ subscriptionCourse.course.id }}, -1)">-</button>
-									<button class="btn btn-success" onclick="updateCredits({{ user.id }}, {{ subscription.id }}, {{ subscriptionCourse.course.id }}, 1)">+</button>
-								</td>
-							</tr>
+							{% set key = subscription.plan.name ~ '-' ~ subscriptionCourse.course.name %}
+							{% if key not in displayedSubscriptions %}
+								{% set displayedSubscriptions = displayedSubscriptions|merge([key]) %}
+								<tr>
+									<td>{{ subscription.plan.name }}</td>
+									<td>{{ subscriptionCourse.course.name }}</td>
+									<td id="credits-{{ subscription.id }}-{{ subscriptionCourse.course.id }}">{{ subscriptionCourse.remainingCredits }}</td>
+									<td>
+										<button class="btn btn-danger" onclick="updateCredits({{ user.id }}, {{ subscription.id }}, {{ subscriptionCourse.course.id }}, -1)">-</button>
+										<button class="btn btn-success" onclick="updateCredits({{ user.id }}, {{ subscription.id }}, {{ subscriptionCourse.course.id }}, 1)">+</button>
+									</td>
+								</tr>
+							{% endif %}
 						{% endfor %}
 					{% endfor %}
 				</tbody>
@@ -32,30 +38,28 @@
 		</div>
 	</div>
 	<script>
-    function updateCredits(userId, subscriptionId, courseId, increment) {
-        fetch('{{ path('admin_update_credits', {'userId': user.id}) }}', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-                'X-CSRF-TOKEN': '{{ csrf_token('admin_update_credits') }}'
-            },
-            body: JSON.stringify({
-                courseId: courseId,
-                subscriptionId: subscriptionId,  // Inclure l'ID de la souscription
-                increment: increment
-            })
-        })
-        .then(response => response.json())
-        .then(data => {
-            if (data.newCredits !== undefined) {
-                document.getElementById('credits-' + subscriptionId + '-' + courseId).innerText = data.newCredits;
-            } else {
-                console.error('Erreur:', data.error);
-            }
-        })
-        .catch(error => {
-            console.error('Erreur:', error);
-        });
-    }
-</script>
+		function updateCredits(userId, subscriptionId, courseId, increment) {
+fetch('{{ path('admin_update_credits', {'userId': user.id}) }}', {
+method: 'POST',
+headers: {
+'Content-Type': 'application/json',
+'X-CSRF-TOKEN': '{{ csrf_token('admin_update_credits') }}'
+},
+body: JSON.stringify(
+{
+courseId: courseId, subscriptionId: subscriptionId, // Inclure l'ID de la souscription
+increment: increment
+}
+)
+}).then(response => response.json()).then(data => {
+if (data.newCredits !== undefined) {
+document.getElementById('credits-' + subscriptionId + '-' + courseId).innerText = data.newCredits;
+} else {
+console.error('Erreur:', data.error);
+}
+}).catch(error => {
+console.error('Erreur:', error);
+});
+}
+	</script>
 {% endblock %}
