--- a/templates/admin/client_list.html.twig
+++ b/templates/admin/client_list.html.twig
@@ -41,7 +41,7 @@
 								<a href="{{ path('admin_subscription_new', {'userId': user.id}) }}" class="btn btn-general btn-sm mt-1">Ajouter un forfait</a>
 								<a href="{{ path('admin_user_subscriptions', {'userId': user.id}) }}" class="btn btn-general btn-sm mt-1">Gérer les crédits</a>
 								<br>
-								<a href="{{ path('admin_client_edit', {'id': user.id}) }}" class="btn update btn-sm">Modifier</a>
+								<a href="{{ path('admin_client_edit', {'id': user.id}) }}" class="btn update btn-sm mt-1">Modifier</a>
 								<a href="{{ path('admin_client_delete', {'id': user.id}) }}" class="btn complet btn-sm mt-1" onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce client ?');">Supprimer</a>
 							</td>
 						</tr>
