--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -46,7 +46,7 @@
 			<a href="{{ path('user_subscription') }}" class="btn btn-general">Mes forfaits</a>
 			<a href="{{ path('booking_manage') }}" class="btn btn-general">Mes réservations</a>
 			{% if is_granted('ROLE_ADMIN') %}
-				<a href="{{ path('course_new') }}" class="btn reserve-btn create-cours">Créer un cours</a>
+				<a href="{{ path('course_new', { 'year': currentYear, 'week': currentWeek }) }}" class="btn reserve-btn create-cours">Créer un cours</a>
 			{% endif %}
 			<div>
 				<p class="week-day">
@@ -154,7 +154,7 @@
 															</p>
 															<p class="reserve">Réservé</p>
 															{% if interval_until_course >= 6 %}
-																<a href="{{ path('booking_cancel', { 'bookingId': user_booking.id }) }}" class="btn complet btn-sm" onclick="return confirm('Êtes-vous sûr de vouloir annuler ce cours ?');">Annuler</a>
+																<a href="{{ path('booking_cancel', { 'bookingId': user_booking.id, 'year': currentYear, 'week': currentWeek }) }}" class="btn complet btn-sm" onclick="return confirm('Êtes-vous sûr de vouloir annuler ce cours ?');">Annuler</a>
 															{% else %}
 																<button class="btn btn-sm" disabled>Annulation impossible</button>
 															{% endif %}
@@ -171,30 +171,34 @@
 																		places restantes
 																	</p>
 																{% endif %}
-																<a href="{{ path('booking_new', { 'courseId': course.id }) }}" class="btn reserve-btn btn-sm">Réserver</a>
+																<a href="{{ path('booking_new', { 'courseId': course.id, 'year': currentYear, 'week': currentWeek }) }}" class="btn reserve-btn btn-sm">Réserver</a>
 															{% else %}
 																<p class="complet">Complet</p>
 															{% endif %}
 														{% endif %}
 														{% if is_granted('ROLE_ADMIN') %}
 															<div>
-																<a href="{{ path('course_edit', { 'id': course.id }) }}" class="btn update btn-sm mt-2">Modifier</a>
+																<a href="{{ path('course_edit', { 'id': course.id, 'year': currentYear, 'week': currentWeek }) }}" class="btn update btn-sm mt-2">Modifier</a>
 																<form action="{{ path('admin_course_cancel', { 'courseId': course.id }) }}" method="POST" class="d-inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir annuler ce cours ?');">
+																	<input type="hidden" name="year" value="{{ currentYear }}">
+																	<input type="hidden" name="week" value="{{ currentWeek }}">
 																	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ course.id) }}">
 																	<button type="submit" class="btn complet btn-sm">Annuler</button>
 																</form>
 																<form action="{{ path('course_delete', { 'id': course.id }) }}" method="POST" class="d-inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce cours ?');">
+																	<input type="hidden" name="year" value="{{ currentYear }}">
+																	<input type="hidden" name="week" value="{{ currentWeek }}">
 																	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ course.id) }}">
 																	<button type="submit" class="btn complet btn-sm mt-2">Supprimer</button>
 																</form>
 															</div>
-															<form action="{{ path('course_update_capacity', {id: course.id}) }}" method="POST" class="mt-2">
+															<form action="{{ path('course_update_capacity', { 'id': course.id }) }}" method="POST" class="mt-2">
 																<input type="hidden" name="year" value="{{ currentYear }}">
 																<input type="hidden" name="week" value="{{ currentWeek }}">
 																<button type="submit" name="action" value="decrease" class="btn btn-sm btn-outline-danger less">-</button>
 																<button type="submit" name="action" value="increase" class="btn btn-sm btn-outline-success more">+</button>
 																<span>Capacité :
-																	{{ course_capacity }}</span>
+																	{{ course.capacity }}</span>
 															</form>
 														{% endif %}
 													</td>
@@ -295,7 +299,7 @@
 														<p class="btn reserve btn-sm">Réservé</p>
 														<br>
 														{% if interval_until_course >= 6 %}
-															<a href="{{ path('booking_cancel', { 'bookingId': user_booking.id }) }}" class="btn complet btn-sm" onclick="return confirm('Êtes-vous sûr de vouloir annuler ce cours ?');">Annuler</a>
+															<a href="{{ path('booking_cancel', { 'bookingId': user_booking.id, 'year': currentYear, 'week': currentWeek }) }}" class="btn complet btn-sm" onclick="return confirm('Êtes-vous sûr de vouloir annuler ce cours ?');">Annuler</a>
 														{% else %}
 															<button class="btn btn-sm" disabled>Annulation impossible</button>
 														{% endif %}
@@ -310,31 +314,34 @@
 																	places restantes
 																</p>
 															{% endif %}
-															<a href="{{ path('booking_new', { 'courseId': course.id }) }}" class="btn reserve-btn btn-sm">Réserver</a>
+															<a href="{{ path('booking_new', { 'courseId': course.id, 'year': currentYear, 'week': currentWeek }) }}" class="btn reserve-btn btn-sm">Réserver</a>
 														{% else %}
 															<p class="complet">Complet</p>
 														{% endif %}
 													{% endif %}
 													{% if is_granted('ROLE_ADMIN') %}
 														<div>
-															<a href="{{ path('course_edit', { 'id': course.id }) }}" class="btn update btn-sm mt-2">Modifier</a>
+															<a href="{{ path('course_edit', { 'id': course.id, 'year': currentYear, 'week': currentWeek }) }}" class="btn update btn-sm mt-2">Modifier</a>
 															<form action="{{ path('admin_course_cancel', { 'courseId': course.id }) }}" method="POST" class="d-inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir annuler ce cours ?');">
+																<input type="hidden" name="year" value="{{ currentYear }}">
+																<input type="hidden" name="week" value="{{ currentWeek }}">
 																<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ course.id) }}">
-																<button type="submit" class="btn complet btn-sm mt-2">Annuler</button>
+																<button type="submit" class="btn complet btn-sm">Annuler</button>
 															</form>
-															<br>
 															<form action="{{ path('course_delete', { 'id': course.id }) }}" method="POST" class="d-inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce cours ?');">
+																<input type="hidden" name="year" value="{{ currentYear }}">
+																<input type="hidden" name="week" value="{{ currentWeek }}">
 																<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ course.id) }}">
 																<button type="submit" class="btn complet btn-sm mt-2">Supprimer</button>
 															</form>
 														</div>
-														<form action="{{ path('course_update_capacity', {id: course.id}) }}" method="POST" class="mt-2">
+														<form action="{{ path('course_update_capacity', { 'id': course.id }) }}" method="POST" class="mt-2">
 															<input type="hidden" name="year" value="{{ currentYear }}">
 															<input type="hidden" name="week" value="{{ currentWeek }}">
 															<button type="submit" name="action" value="decrease" class="btn btn-sm btn-outline-danger less">-</button>
 															<button type="submit" name="action" value="increase" class="btn btn-sm btn-outline-success more">+</button>
 															<span>Capacité :
-																{{ course_capacity }}</span>
+																{{ course.capacity }}</span>
 														</form>
 													{% endif %}
 												</td>
